--- a/src/super_shop_management_system/Credits.fxml
+++ b/src/super_shop_management_system/Credits.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,5 +12,6 @@
             <Image url="@../image/credits.jpg" />
          </image>
       </ImageView>
+      <Button fx:id="Backbtn" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#Backbtn_Action" text="Back" />
    </children>
 </AnchorPane>
